correccion del login

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,10 @@
 {
-  "hosting": {
-    "public": ".",
-    "ignore": [
-      "firebase.json",
-      "/.*",
-      "/node_modules/"
-    ],
-    "cleanUrls": true
-  }
+    "hosting": {
+        "public": "alice-i4",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ]
+    }
 }
-
